# use-geometry

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  RELEASING.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: advisory-rust-quality.yml  facade-publish-readiness.yml  publish-readiness.yml  publish.yml  release-plz-release.yml  sbom.yml
crates/use-affine/: Cargo.toml  README.md
crates/use-affine/src/: lib.rs
crates/use-angle/: Cargo.toml  README.md
crates/use-angle/src/: lib.rs
crates/use-archimedean/: Cargo.toml  README.md
crates/use-archimedean/src/: lib.rs
crates/use-bezier/: Cargo.toml  README.md
crates/use-bezier/src/: lib.rs
crates/use-bounds/: Cargo.toml  README.md
crates/use-bounds/src/: lib.rs
crates/use-catalan-solid/: Cargo.toml  README.md
crates/use-catalan-solid/src/: lib.rs
crates/use-cell/: Cargo.toml  README.md
crates/use-cell/src/: lib.rs
crates/use-circle/: Cargo.toml  README.md
crates/use-circle/src/: lib.rs
crates/use-complex/: Cargo.toml  README.md
crates/use-configuration/: Cargo.toml  README.md
crates/use-configuration/src/: lib.rs
crates/use-congruence/: Cargo.toml  README.md
crates/use-congruence/src/: lib.rs
crates/use-conic/: Cargo.toml  README.md
crates/use-conic/src/: lib.rs
crates/use-containment/: Cargo.toml  README.md
crates/use-containment/src/: lib.rs
crates/use-coordinate/: Cargo.toml  README.md
crates/use-coordinate/src/: lib.rs
crates/use-coxeter/: Cargo.toml  README.md
crates/use-coxeter/src/: lib.rs
crates/use-crease/: Cargo.toml  README.md
crates/use-crease/src/: lib.rs
crates/use-curve/: Cargo.toml  README.md
crates/use-curve/src/: lib.rs
crates/use-delaunay/: Cargo.toml  README.md
crates/use-delaunay/src/: lib.rs
crates/use-dihedral/: Cargo.toml  README.md
crates/use-dihedral/src/: lib.rs
crates/use-dimension/: Cargo.toml  README.md
crates/use-dimension/src/: lib.rs
crates/use-distance/: Cargo.toml  README.md
crates/use-distance/src/: lib.rs
crates/use-duality/: Cargo.toml  README.md
crates/use-duality/src/: lib.rs
crates/use-face/: Cargo.toml  README.md
crates/use-face/src/: lib.rs
crates/use-folding/: Cargo.toml  README.md
crates/use-folding/src/: lib.rs
crates/use-geometric-complex/: Cargo.toml  README.md
crates/use-geometric-complex/src/: lib.rs
crates/use-geometry/: Cargo.toml  README.md
crates/use-geometry-core/: Cargo.toml  README.md
crates/use-geometry-core/src/: lib.rs
crates/use-geometry/examples/: validated_construction.rs
crates/use-geometry/src/: lib.rs  prelude.rs
crates/use-geometry/tests/: facade_feature_matrix.rs  property_invariants.rs  validated_api.rs
crates/use-hull/: Cargo.toml  README.md
crates/use-hull/src/: lib.rs
crates/use-hyperplane/: Cargo.toml  README.md
crates/use-hyperplane/src/: lib.rs
crates/use-hypersphere/: Cargo.toml  README.md
crates/use-hypersphere/src/: lib.rs
crates/use-incidence/: Cargo.toml  README.md
crates/use-incidence/src/: lib.rs
crates/use-intersection/: Cargo.toml  README.md
crates/use-intersection/src/: lib.rs
crates/use-inversion/: Cargo.toml  README.md
crates/use-inversion/src/: lib.rs
crates/use-johnson-solid/: Cargo.toml  README.md
crates/use-johnson-solid/src/: lib.rs
crates/use-line/: Cargo.toml  README.md
crates/use-line/src/: lib.rs
crates/use-linkage/: Cargo.toml  README.md
crates/use-linkage/src/: lib.rs
crates/use-manifold/: Cargo.toml  README.md
crates/use-manifold/src/: lib.rs
crates/use-mesh/: Cargo.toml  README.md
crates/use-mesh/src/: lib.rs
crates/use-orientation/: Cargo.toml  README.md
crates/use-orientation/src/: lib.rs
crates/use-origami/: Cargo.toml  README.md
crates/use-origami/src/: lib.rs
crates/use-orthotope/: Cargo.toml  README.md
crates/use-orthotope/src/: lib.rs
crates/use-plane/: Cargo.toml  README.md
crates/use-plane/src/: lib.rs
crates/use-point/: Cargo.toml  README.md
crates/use-point/src/: lib.rs
crates/use-polygon/: Cargo.toml  README.md
crates/use-polygon/src/: lib.rs
crates/use-polyhedral-net/: Cargo.toml  README.md
crates/use-polyhedral-net/src/: lib.rs
crates/use-polyhedron/: Cargo.toml  README.md
crates/use-polyhedron/src/: lib.rs
crates/use-polyline/: Cargo.toml  README.md
crates/use-polyline/src/: lib.rs
crates/use-polytope/: Cargo.toml  README.md
crates/use-polytope/src/: lib.rs
crates/use-projection/: Cargo.toml  README.md
crates/use-projection/src/: lib.rs
crates/use-projective/: Cargo.toml  README.md
crates/use-projective/src/: lib.rs
crates/use-ray/: Cargo.toml  README.md
crates/use-ray/src/: lib.rs
crates/use-rectangle/: Cargo.toml  README.md
crates/use-rectangle/src/: lib.rs
crates/use-reflection/: Cargo.toml  README.md
crates/use-reflection/src/: lib.rs
crates/use-regular-polytope/: Cargo.toml  README.md
crates/use-regular-polytope/src/: lib.rs
crates/use-rigid-folding/: Cargo.toml  README.md
crates/use-rigid-folding/src/: lib.rs
crates/use-schlafli/: Cargo.toml  README.md
crates/use-schlafli/src/: lib.rs
crates/use-segment/: Cargo.toml  README.md
crates/use-segment/src/: lib.rs
crates/use-similarity/: Cargo.toml  README.md
crates/use-similarity/src/: lib.rs
crates/use-simplex/: Cargo.toml  README.md
crates/use-simplex/src/: lib.rs
crates/use-sphere/: Cargo.toml  README.md
crates/use-sphere/src/: lib.rs
crates/use-spline/: Cargo.toml  README.md
crates/use-spline/src/: lib.rs
crates/use-surface/: Cargo.toml  README.md
crates/use-surface/src/: lib.rs
crates/use-tessellation/: Cargo.toml  README.md
crates/use-tessellation/src/: lib.rs
crates/use-torus/: Cargo.toml  README.md
crates/use-transform/: Cargo.toml  README.md
crates/use-triangle/: Cargo.toml  README.md
crates/use-triangulation/: Cargo.toml  README.md
crates/use-unfolding/: Cargo.toml  README.md
crates/use-uniform-polytope/: Cargo.toml  README.md
crates/use-voronoi/: Cargo.toml  README.md
crates/use-wythoff/: Cargo.toml  README.md
(+8 files in other folders)
