[package]
name = "use-affine"
description = "Affine-space helpers for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-affine"
keywords = ["geometry", "affine", "combination"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-point.workspace = true

[lints]
workspace = true
