[package]
name = "use-bounds"
description = "Axis-aligned 2D bounds helpers for RustUse geometry"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-bounds"
keywords = ["geometry", "bounds", "aabb", "2d"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-coordinate.workspace = true
use-point.workspace = true

[lints]
workspace = true
