[package]
name = "use-circle"
description = "Small circle primitives for RustUse geometry"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-circle"
keywords = ["geometry", "circle", "2d", "radius"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-bounds.workspace = true
use-coordinate.workspace = true
use-point.workspace = true

[lints]
workspace = true
