[package]
name = "use-congruence"
description = "Congruence helpers for RustUse geometry"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-congruence"
keywords = ["geometry", "congruence", "relation"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
