[package]
name = "use-curve"
description = "Curve primitives for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-curve"
keywords = ["geometry", "curve", "parameter"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-point.workspace = true

[lints]
workspace = true
