[package]
name = "use-face"
description = "Face primitives for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-face"
keywords = ["geometry", "face", "boundary"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
