[package]
name = "use-folding"
description = "Folding primitives for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-folding"
keywords = ["geometry", "folding", "angle"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-angle.workspace = true

[lints]
workspace = true
