[package]
name = "use-geometric-complex"
description = "Geometric complex primitives for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-geometric-complex"
keywords = ["geometry", "complex", "cell", "simplicial"]
categories = ["mathematics", "science"]

[lib]
name = "use_complex"

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-cell.workspace = true

[lints]
workspace = true
