[package]
name = "use-hyperplane"
description = "Hyperplane primitives for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-hyperplane"
keywords = ["geometry", "hyperplane", "nd", "rustuse"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-coordinate.workspace = true

[lints]
workspace = true
