[package]
name = "use-intersection"
description = "Intersection result primitives for RustUse geometry"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-intersection"
keywords = ["geometry", "intersection", "relation"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-point.workspace = true

[lints]
workspace = true
