[package]
name = "use-inversion"
description = "Geometric inversion primitives for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-inversion"
keywords = ["geometry", "inversion", "circle", "rustuse"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-geometry-core.workspace = true
use-point.workspace = true

[lints]
workspace = true
