[package]
name = "use-johnson-solid"
description = "Johnson solid identifiers for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-johnson-solid"
keywords = ["geometry", "johnson", "solid"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
