[package]
name = "use-line"
description = "Small 2D line primitives for RustUse geometry"
publish = true
authors.workspace = true
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-line"
keywords = ["geometry", "line", "2d", "slope"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "use_line"

[dependencies]
use-coordinate.workspace = true
use-orientation.workspace = true
use-point.workspace = true
use-vector.workspace = true

[lints]
workspace = true
