[package]
name = "use-manifold"
description = "Manifold vocabulary for the RustUse geometry workspace"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-manifold"
keywords = ["geometry", "manifold", "topology", "rustuse"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
